cleaning a bit